More bootstrap fixes.

--- a/MessageWeb/Views/Home/Contact.cshtml
+++ b/MessageWeb/Views/Home/Contact.cshtml
@@ -1,8 +1,12 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1 class="display-4">@ViewBag.Title</h1>
+        <p class="lead">@ViewBag.Message</p>
+    </div>
+</div>
 
 <address>
     One Microsoft Way<br />
