--- a/MessageWeb/Views/Account/Register.cshtml
+++ b/MessageWeb/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model MessageWeb.Models.RegisterViewModel
+﻿@model Possible.MessageWeb.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
