--- a/MessageWeb/Views/Account/ResetPassword.cshtml
+++ b/MessageWeb/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model MessageWeb.Models.ResetPasswordViewModel
+﻿@model Possible.MessageWeb.Models.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
