--- a/MessageWeb/Views/Account/SendCode.cshtml
+++ b/MessageWeb/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model MessageWeb.Models.SendCodeViewModel
+﻿@model Possible.MessageWeb.Models.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
