--- a/MessageWeb/Views/Account/VerifyCode.cshtml
+++ b/MessageWeb/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model MessageWeb.Models.VerifyCodeViewModel
+﻿@model Possible.MessageWeb.Models.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
