--- a/MessageWeb/Views/Manage/AddPhoneNumber.cshtml
+++ b/MessageWeb/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model MessageWeb.Models.AddPhoneNumberViewModel
+﻿@model Possible.MessageWeb.Models.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
