--- a/MessageWeb/Views/Manage/ChangePassword.cshtml
+++ b/MessageWeb/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model MessageWeb.Models.ChangePasswordViewModel
+﻿@model Possible.MessageWeb.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
