--- a/MessageWeb/Views/Manage/ManageLogins.cshtml
+++ b/MessageWeb/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model MessageWeb.Models.ManageLoginsViewModel
+﻿@model Possible.MessageWeb.Models.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
