--- a/MessageWeb/Views/Manage/SetPassword.cshtml
+++ b/MessageWeb/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model MessageWeb.Models.SetPasswordViewModel
+﻿@model Possible.MessageWeb.Models.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
