--- a/MessageWeb/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/MessageWeb/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model MessageWeb.Models.VerifyPhoneNumberViewModel
+﻿@model Possible.MessageWeb.Models.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
