--- a/MessageWeb/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/MessageWeb/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model MessageWeb.Models.ExternalLoginConfirmationViewModel
+﻿@model Possible.MessageWeb.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
