--- a/MessageWeb/Views/Account/ForgotPassword.cshtml
+++ b/MessageWeb/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model MessageWeb.Models.ForgotPasswordViewModel
+﻿@model Possible.MessageWeb.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
