Implemented support for sending confirmation email to users (to confirm their email addresses)

--- a/MessageWeb/Views/Account/Register.cshtml
+++ b/MessageWeb/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model Possible.MessageWeb.Models.RegisterViewModel
+﻿@model Possible.MessageWeb.Models.Account.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
