--- a/MessageWeb/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/MessageWeb/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model Possible.MessageWeb.Models.ExternalLoginListViewModel
+﻿@model Possible.MessageWeb.Models.Account.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
