--- a/MessageWeb/Views/Shared/_NavigationItems.cshtml
+++ b/MessageWeb/Views/Shared/_NavigationItems.cshtml
@@ -10,5 +10,9 @@
     <li class="nav-item">
         @Html.ActionLink("Users", "Index", new { controller = "Users" }, new { @class = "nav-link" })
     </li>
+    <li class="nav-item">
+        @Html.ActionLink("Messages", "Index", new { controller = "Messages" }, new { @class = "nav-link" })
+    </li>
+
     }
 </ul>
