Added async support for queries too. Fixed up UI for Users a bit.

--- a/MessageWeb/Views/Users/Index.cshtml
+++ b/MessageWeb/Views/Users/Index.cshtml
@@ -3,15 +3,15 @@
 @{
     ViewBag.Title = "Index";
 }
-    <ul class="list-group">
-        @foreach (var user in Model)
-        {
-        <li class="list-group-item list-group-item-action">
-            <span>@user.UserName (aka @user.FirstName @user.LastName)</span>
-            <div style="float:right">
-                <button type="button" class="btn btn-light">Light</button>
-                <button type="button" class="btn btn-info">Info</button>
-            </div>
-        </li>
-        }
-    </ul>
+<h3>Users</h3>
+<ul class="list-group">
+    @foreach (var user in Model)
+    {
+    <li class="list-group-item list-group-item-action">
+        <span>@user.UserName (aka @user.FirstName @user.LastName)</span>
+        <div class="float-right">
+            <button type="button" class="btn btn-info" onclick="window.location='/messages/new?u=@user.UserName'">Message</button>
+        </div>
+    </li>
+    }
+</ul>
