--- a/MessageWeb/Views/Messages/New.cshtml
+++ b/MessageWeb/Views/Messages/New.cshtml
@@ -19,7 +19,7 @@
 
             <div class="form-group">
                 @Html.LabelFor(m => m.Contents, new { @class = "control-label" })
-                @Html.TextAreaFor(m => m.Contents, new { @class = "form-control" });
+                @Html.TextAreaFor(m => m.Contents, new { @class = "form-control" })
             </div>
 
             <div class="form-group">
