Changed markasread to POST.

--- a/MessageWeb/Views/Messages/Index.cshtml
+++ b/MessageWeb/Views/Messages/Index.cshtml
@@ -31,7 +31,7 @@
 <script lang="en" type="text/javascript">
     function MarkAsRead(id, read) {
         $.ajax({
-            type: "GET",
+            type: "POST",
             traditional: true,
             async: false,
             cache: false,
