Added HideMeFromList property

--- a/MessageWeb/Views/Manage/Index.cshtml
+++ b/MessageWeb/Views/Manage/Index.cshtml
@@ -10,6 +10,8 @@
     <h4>Change your account settings</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>Hide me from lists</dt>
+        <dd>@Html.CheckBoxFor(m=>m.HideMeFromList)</dd>
         <dt>Password:</dt>
         <dd>
             [
