--- a/MessageWeb/Views/Messages/Index.cshtml
+++ b/MessageWeb/Views/Messages/Index.cshtml
@@ -2,8 +2,14 @@
 @{
     ViewBag.Title = "Index";
 }
-<h2>Your messages</h2>
-
+<div class="row">
+    <div class="col-md-10">
+        <h2>Your messages</h2>
+    </div>
+    <div class="col-md-2">
+        @Html.ActionLink("New message", "New", "Messages", new { controller = "Messages" }, new { @class = "btn btn-primary" })
+    </div>
+</div>
 <ul class="list-group">
     @foreach (var message in Model)
     {
