Updated readme.md and cleaned up code a bit

--- a/MessageWeb/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/MessageWeb/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model Possible.MessageWeb.Models.ExternalLoginConfirmationViewModel
+﻿@model Possible.MessageWeb.Models.Account.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
